--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     // Function to prompt user for their choice of RPS
     function playerInput () {
         let pinput = prompt("Please select Rock, Paper, or Scissors:");
-        console.log("Your choice was: " + pinput);
         return pinput;
     }
     
@@ -25,7 +24,6 @@
     // Finally the random choice is returned and stored in compPlayer
     function computerPlay () {
         let randomSelect = Math.floor(Math.random() * choices.length);
-        console.log("The Computers choice was: " + computerChoice);
         return choices[randomSelect]; 
     }
 
@@ -49,25 +47,44 @@
             The Current score is Player: ${playerWins}, Computer: ${computerWins}, and
             Draws: ${draws}.`;
         } else if (player === "ROCK" && computer === "PAPER") {
-            console.log("Sorry, you lose this round. Rock beats Paper.");
-            return ++computerWins;
+            computerWins += 1;
+            return `Sorry, you lose. You picked ${player} and the computer picked ${computer}.
+            The Current score is Player: ${playerWins}, Computer: ${computerWins}, and
+            Draws: ${draws}.`;
         } else if (player === "PAPER" && computer === "SCISSORS") {
-            console.log("Sorry, you lose this round. Scissors beats Paper.")
-            return ++computerWins;
+            computerWins += 1;
+            return `Sorry, you lose. You picked ${player} and the computer picked ${computer}.
+            The Current score is Player: ${playerWins}, Computer: ${computerWins}, and
+            Draws: ${draws}.`;
         } else if (player === "SCISSORS" && computer === "ROCK") {
-            console.log("Sorry, you lose this round. Rock beats Scissors.")
-            return ++computerWins;
+            computerWins += 1;
+            return `Sorry, you lose. You picked ${player} and the computer picked ${computer}.
+            The Current score is Player: ${playerWins}, Computer: ${computerWins}, and
+            Draws: ${draws}.`;
         } else if (player === "PAPER" && computer === "ROCK") {
-            console.log("Yay, you win this round. Paper bears Rock.")
-            return ++playerWins;
+            playerWins += 1;
+            return `Yay, you win. You picked ${player} and the computer picked ${computer}.
+            The Current score is Player: ${playerWins}, Computer: ${computerWins}, and
+            Draws: ${draws}.`;
         } else if (player === "SCISSORS" && computer === "PAPER") {
-            console.log("Yay, you win this round. Scissors beats Paper.")
-            return ++playerWins;
+            playerWins += 1;
+            return `Yay, you win. You picked ${player} and the computer picked ${computer}.
+            The Current score is Player: ${playerWins}, Computer: ${computerWins}, and
+            Draws: ${draws}.`;
         } else if (player === "ROCK" && computer === "SCISSORS") {
-            console.log("Yay, you win this round. Rock beats Scissors.")
-            return ++playerWins;
-        } else {
-            console.log("No result was achived due to an error")
+            playerWins += 1;
+            return `Yay, you win. You picked ${player} and the computer picked ${computer}.
+            The Current score is Player: ${playerWins}, Computer: ${computerWins}, and
+            Draws: ${draws}.`;
+        }
+    }
+
+    function bigWinner() {
+        switch (playerWins) {
+            case 1: if (playerWins > 3) {
+                console.log("You won the best of five!");
+            }
+
         }
     }
     
@@ -76,8 +93,8 @@
     // the game a specified amount of times. Each time getting the users input,
     // randomizing the comouter players choice, and tallying wins/loses/draws.
     function game () {
-        for(let i = 1; i <= 5; i++) {
-            playRound(playerInput(), computerPlay());
+        for(let i = 0; i < 5; i++) {
+            console.log(playRound(playerInput(), computerPlay()));
         }
     }
 
