--- a/index.html
+++ b/index.html
@@ -42,53 +42,39 @@
         computer = computer.toUpperCase();
 
         if (player === computer){
-            ++draws;
-            return `It's a draw. You picked ${player} and the computer picked ${computer}.
-            The Current score is Player: ${playerWins}, Computer: ${computerWins}, and
-            Draws: ${draws}.`;
+            draws += 1;
+            return `It's a draw. You picked ${player} and the computer picked ${computer}. The Current score is Player: ${playerWins}, Computer: ${computerWins}, and Draws: ${draws}.`;
         } else if (player === "ROCK" && computer === "PAPER") {
             computerWins += 1;
-            return `Sorry, you lose. You picked ${player} and the computer picked ${computer}.
-            The Current score is Player: ${playerWins}, Computer: ${computerWins}, and
-            Draws: ${draws}.`;
+            return `Sorry, you lose. You picked ${player} and the computer picked ${computer}. The Current score is Player: ${playerWins}, Computer: ${computerWins}, and Draws: ${draws}.`;
         } else if (player === "PAPER" && computer === "SCISSORS") {
             computerWins += 1;
-            return `Sorry, you lose. You picked ${player} and the computer picked ${computer}.
-            The Current score is Player: ${playerWins}, Computer: ${computerWins}, and
-            Draws: ${draws}.`;
+            return `Sorry, you lose. You picked ${player} and the computer picked ${computer}. The Current score is Player: ${playerWins}, Computer: ${computerWins}, and Draws: ${draws}.`;
         } else if (player === "SCISSORS" && computer === "ROCK") {
             computerWins += 1;
-            return `Sorry, you lose. You picked ${player} and the computer picked ${computer}.
-            The Current score is Player: ${playerWins}, Computer: ${computerWins}, and
-            Draws: ${draws}.`;
+            return `Sorry, you lose. You picked ${player} and the computer picked ${computer}. The Current score is Player: ${playerWins}, Computer: ${computerWins}, and Draws: ${draws}.`;
         } else if (player === "PAPER" && computer === "ROCK") {
             playerWins += 1;
-            return `Yay, you win. You picked ${player} and the computer picked ${computer}.
-            The Current score is Player: ${playerWins}, Computer: ${computerWins}, and
-            Draws: ${draws}.`;
+            return `Yay, you win. You picked ${player} and the computer picked ${computer}. The Current score is Player: ${playerWins}, Computer: ${computerWins}, and Draws: ${draws}.`;
         } else if (player === "SCISSORS" && computer === "PAPER") {
             playerWins += 1;
-            return `Yay, you win. You picked ${player} and the computer picked ${computer}.
-            The Current score is Player: ${playerWins}, Computer: ${computerWins}, and
-            Draws: ${draws}.`;
+            return `Yay, you win. You picked ${player} and the computer picked ${computer}. The Current score is Player: ${playerWins}, Computer: ${computerWins}, and Draws: ${draws}.`;
         } else if (player === "ROCK" && computer === "SCISSORS") {
             playerWins += 1;
-            return `Yay, you win. You picked ${player} and the computer picked ${computer}.
-            The Current score is Player: ${playerWins}, Computer: ${computerWins}, and
-            Draws: ${draws}.`;
+            return `Yay, you win. You picked ${player} and the computer picked ${computer}. The Current score is Player: ${playerWins}, Computer: ${computerWins}, and Draws: ${draws}.`;
         }
     }
 
     function bigWinner() {
-        switch (playerWins) {
-            case 1: if (playerWins > 3) {
-                console.log("You won the best of five!");
-            }
-
+        if (playerWins >= 3) {
+            console.log("Congratulations! You won the best of 5!");
+        } else if (computerWins >= 3) {
+            console.log("Sorry, but the comouter has won the best of 5.");
+        } else {
+            console.log("It was a draw. Play another 5 rounds to determine a winner");
         }
     }
     
-        
     // The game function is really added to make a for loop that plays
     // the game a specified amount of times. Each time getting the users input,
     // randomizing the comouter players choice, and tallying wins/loses/draws.
@@ -96,14 +82,8 @@
         for(let i = 0; i < 5; i++) {
             console.log(playRound(playerInput(), computerPlay()));
         }
+        bigWinner ();
     }
-
-    // const result = playRound(realPlayer, compPlayer);
-    //      switch(result) {
-    //         case player:
-    //             wins++;
-    //             break;
-    //     }
 
 
     </script>
