Finished the UI, all buttons are functional, even added a reset/play again button.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <div class="bigWin">Test</div>
 
-    <button class="playAgain">Play again?</button>
+    <button class="playAgain">Reset/Play again?</button>
     
 </body>
 </html>
